# GravityMaze

./: .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/spencer/gravitymaze/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: default_options.json  lineFragmentShader.txt  lineVertexShader.txt  options.json
app/src/main/assets/midi_songs/: song0.MID  song1.MID  song10.mid  song11.mid  song12.mid  song13.mid  song14.MID  song15.mid  song16.mid  song17.mid  song18.MID  song19.MID  song2.mid  song20.MID  song21.MID  song22.MID  song3.mid  song4.MID  song6.mid  song7.mid  song8.mid  song9.mid
app/src/main/cpp/: AndroidOut.cpp  AndroidOut.h  AudioSubSystem.cpp  AudioSubSystem.h  CMakeLists.txt  Color.cpp  Color.h  DrawHelper.cpp  DrawHelper.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  GameRender.cpp  GameRender.h  Maze.cpp  Maze.h  MazeObject.cpp  MazeObject.h  MidiManager.cpp  MidiManager.h  Options.cpp  Options.h  Progress.cpp  Progress.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  TextRenderer.cpp  TextRenderer.h  TimeKeeper.cpp  TimeKeeper.h  main.cpp
app/src/main/cpp/MazeObjects/: MazeBall.cpp  MazeBall.h  MazeBlock.cpp  MazeBlock.h  MazeQueen.cpp  MazeQueen.h  MazeWall.cpp  MazeWall.h  MazeWorm.cpp  MazeWorm.h
app/src/main/java/com/spencer/gravitymaze/: MainActivity.kt  MainMenu.kt  OptionsActivity.kt
app/src/main/res/layout/: activity_main_menu.xml  activity_options.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/spencer/gravitymaze/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
